feat: 稼动率统计
