# app/business/deviceMonitor/deviceMonitorModel/devMap.go
@@ -7,12 +7,13 @@ import (
 
 // SysIotDbDevMap 数据和iotdb 对照表
 type SysIotDbDevMap struct {
-	ID         int64  `gorm:"column:id;primaryKey;autoIncrement:true;comment:自增标识" json:"id"` // 自增标识
-	DeviceID   int64  `gorm:"column:device_id;not null;comment:设备id" json:"device_id"`        // 设备id
-	TemplateID int64  `gorm:"column:template_id;not null;comment:模板id" json:"template_id"`    // 模板id
-	DataID     int64  `gorm:"column:data_id;not null;comment:测点id" json:"data_id"`            // 测点id
-	Device     string `gorm:"column:device;not null;comment:设备名字" json:"device"`              // 设备名字
-	DataName   string `gorm:"column:data_name;not null;comment:数据名字" json:"data_name"`        // 数据名字
+	ID         int64  `gorm:"column:id;primaryKey;autoIncrement:true;comment:自增标识" json:"id,string"` // 自增标识
+	DeviceID   int64  `gorm:"column:device_id;not null;comment:设备id" json:"device_id"`               // 设备id
+	TemplateID int64  `gorm:"column:template_id;not null;comment:模板id" json:"template_id"`           // 模板id
+	DataID     int64  `gorm:"column:data_id;not null;comment:测点id" json:"data_id"`                   // 测点id
+	Device     string `gorm:"column:device;not null;comment:设备名字" json:"device"`                     // 设备名字
+	DeviceName string `gorm:"-" json:"device_name"`                                                  // 设备名字
+	DataName   string `gorm:"column:data_name;not null;comment:数据名字" json:"data_name"`               // 数据名字
 	Unit       string `gorm:"column:unit;not null;comment:数据单位" json:"unit"`
 	DeptID     int64  `gorm:"column:dept_id;comment:部门ID" json:"dept_id"`      // 部门ID
 	State      bool   `gorm:"column:state;comment:操作状态（0正常-1删除）" json:"state"` // 操作状态（0正常-1删除）
@@ -68,4 +69,17 @@ type DevListReq struct {
 type DevListResp struct {
 	Rows  []*SysIotDbDevMap `json:"rows"`
 	Total uint64            `json:"total"`
+}
+
+// SetDevMapInfo 保存测点信息
+type SetDevMapInfo struct {
+	ID       int64  `gorm:"column:id;primaryKey;autoIncrement:true;comment:自增标识" json:"id,string"` // 自增标识
+	Device   string `gorm:"column:device;not null;comment:测点名字" json:"device"`                     // 设备名字
+	DataName string `gorm:"column:data_name;not null;comment:数据名字" json:"data_name"`               // 数据名字
+	Unit     string `gorm:"column:unit;not null;comment:单位" json:"unit"`                           // 数据名字
+}
+
+// RemoveDevMapInfo 移除测点信息
+type RemoveDevMapInfo struct {
+	Device string `gorm:"column:device;not null;comment:设备名字" json:"device"` // 设备名字
 }
